# agent-chat

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: environment_abstraction_plan.md
src/agent_chat/: __init__.py  __main__.py  agent.py  app.py  chat_environment.py  session_manager.py  tool_registry.py  utils.py
src/agent_chat/plugins/: __init__.py  agent_plugin.py  timestamp_plugin.py  ui_plugin.py  web_plugin.py
src/agent_chat/templates/: index.html
